--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,56 @@
 plugins {
     id 'java'
-    id 'war'
-    id "io.freefair.lombok" version "8.0.1"
+    id 'org.springframework.boot' version '3.0.6'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group 'ru.clevertec'
 version '1.0'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
+ext {
+    set('testcontainersVersion', "1.18.1")
+}
+
 dependencies {
 
     implementation(
-            "org.springframework:spring-core:${springVersion}",
-            "org.springframework:spring-webmvc:${springVersion}",
-            "org.springframework:spring-orm:${springVersion}",
-            'org.hibernate:hibernate-core:6.1.7.Final',
-            'com.fasterxml.jackson.core:jackson-databind:2.14.2',
-            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2',
+
+            'org.springframework.boot:spring-boot-starter-data-jpa',
+            'org.springframework.boot:spring-boot-starter-validation',
+            'org.springframework.boot:spring-boot-starter-web',
+            'org.flywaydb:flyway-core',
             "org.mapstruct:mapstruct:${mapstructVersion}",
-            'org.apache.tomcat:tomcat-dbcp:11.0.0-M5',
-            'org.postgresql:postgresql:42.6.0',
-            'org.hibernate.validator:hibernate-validator:8.0.0.Final',
+            'org.postgresql:postgresql:42.6.0'
     )
 
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
+
     testImplementation(
-            'org.junit.jupiter:junit-jupiter-api:5.9.2',
+            'org.springframework.boot:spring-boot-starter-test',
+            'org.testcontainers:junit-jupiter',
+            'org.testcontainers:postgresql',
             "org.mockito:mockito-core:${mockitoVersion}",
             "org.mockito:mockito-junit-jupiter:${mockitoVersion}",
-            'org.assertj:assertj-core:3.24.2',
-            "org.testcontainers:postgresql:${testcontainersVersion}",
-            "org.testcontainers:junit-jupiter:${testcontainersVersion}",
-            "org.springframework:spring-test:${springVersion}"
+            'org.assertj:assertj-core:3.24.2'
     )
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.2"
 
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    annotationProcessor(
+            "org.mapstruct:mapstruct-processor:${mapstructVersion}",
+            'org.projectlombok:lombok'
+    )
 }
 
 compileJava {
@@ -50,5 +61,15 @@ compileJava {
 }
 
 test {
+    useJUnitPlatform()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+    }
+}
+
+tasks.named('test') {
     useJUnitPlatform()
 }
