--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
+    id "org.flywaydb.flyway" version "9.17.0"
 }
 
 group 'ru.clevertec'
@@ -52,6 +53,8 @@ dependencies {
             'org.projectlombok:lombok-mapstruct-binding:0.2.0',
             'org.projectlombok:lombok'
     )
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 compileJava {
